--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-СЛАВА УКРАIHI
+<html>
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<title>SKR.PP.UA</title>
+</head>
+
+<body>
+
+<p align="center">
+<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/5273.970.jpg?raw=true" width="970" height="970"></p>
+
+</body>
+
+</html>
