--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <p align="center">
-<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/5273.970.jpg?raw=true" width="970" height="970"></p>
+<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="970" height="970"></p>
 
 </body>
 
