--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 <body>
 
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
 <p align="center">
-<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="970" height="970"></p>
+<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"><img border="0" src="../../Downloads/ukraine.jpg"></p>
 
 </body>
 
