--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p align="center">&nbsp;</p>
 <p align="center">&nbsp;</p>
 <p align="center">
-<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"><img border="0" src="../../Downloads/ukraine.jpg"></p>
+<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"></p>
 
 </body>
 
