--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body>
 
-<p align="center">
-<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"></p>
+<p align="center"><a href="https://skr.pp.ua/iptv.m3u8">
+<img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"></a></p>
 
 </body>
 
