--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 <script src="//site.com/playerjs.js" type="text/javascript" async></script>
   function PlayerjsAsync(){
-   player = new Playerjs({...});
+   player = new Playerjs({playerjs-skr.js
+});
 }
 <p align="center">
 <img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"></a></p>
