--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-<script src="//site.com/playerjs.js" type="text/javascript" async></script>
+<script src="//skr.pp.ua/playerjs-skr.js
+" type="text/javascript" async></script>
   function PlayerjsAsync(){
-   player = new Playerjs({playerjs-skr.js
-});
+   player = new Playerjs({...});
 }
 <p align="center">
 <img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"></a></p>
