--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 </head>
 
 <body>
-<script src="//skr.pp.ua/playerjs-skr.js
-" type="text/javascript" async></script>
-  function PlayerjsAsync(){
-   player = new Playerjs({...});
-}
+<iframe src="//site.com/player/playerjs.html?file=https://skr.pp.ua/playerjs-skr.js" type="text/html" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 <p align="center">
 <img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"></a></p>
 
