--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<iframe src="//site.com/player/playerjs.html?file=https://skr.pp.ua/player/playerjs-skr.js" type="text/html" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://mumedfordmemorialorg-my.sharepoint.com/personal/k7_mu_medfordmemorial_org/_layouts/15/embed.aspx?UniqueId=4aec3832-b474-4e60-a50f-c48244ed3483&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Мать (2023).mkv"></iframe>
 <p align="center">
 <img border="0" src="https://github.com/skrebyshi/iptv/blob/main/ukraine.jpg?raw=true" width="755" height="351"></a></p>
 
