--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <title>SKR.PP.UA</title>
+  
+  <p align="center">
+  <script src="//site.com/playerjs.js" type="text/javascript"></script>
+<iframe src="//skr.pp.ua/player/playerjs.html?file=playerjs-24-ukraina.js" type="text/html" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+    
+    </a></p>
 </head>
 
 <body>
-<p align="center">
-<iframe src="https://mumedfordmemorialorg-my.sharepoint.com/personal/k7_mu_medfordmemorial_org/_layouts/15/embed.aspx?UniqueId=4aec3832-b474-4e60-a50f-c48244ed3483&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Мать (2023).mkv"></iframe>
-</a></p>
+
 
 </body>
 
