--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <p align="center">
   <script src="//site.com/playerjs.js" type="text/javascript"></script>
-<iframe src="//skr.pp.ua/player/playerjs.html?file=playerjs-24-ukraina.js" type="text/html" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+<iframe src="//skr.pp.ua/player/playerjs.html?file=//plrjs.com/x.mp4" type="text/html" width="640" height="360" frameborder="0" allowfullscreen></iframe>
     
     </a></p>
 </head>
