--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <title>SKR.PP.UA</title>
-  
-  <p align="center">
-<iframe src="https://mumedfordmemorialorg-my.sharepoint.com/personal/k7_mu_medfordmemorial_org/_layouts/15/embed.aspx?UniqueId=0764aa04-44c1-41b1-9483-1a6e460a4b51&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Мумиешки.2023.mkv"></iframe>
-    </a></p>
 </head>
 
 <body>
+
+
+
+<p><a href="https://skr.pp.ua/Avatar2.htm">
+<img border="0" src="http://filmitorrent.net/uploads/posts/2023-03/1679877623_poster-505898.jpg" width="120" height="177"></a></p>
+
 
 
 </body>
