--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <p><a href="https://skr.pp.ua/Avatar2.htm">
-<img border="0" src="http://filmitorrent.net/uploads/posts/2023-03/1679877623_poster-505898.jpg" width="120" height="177"></a></p>
+<img border="0" src="https://static.hdrezka.ac/i/2022/12/22/tc5e6b8212683gn66r84s.jpg" width="120" height="177"></a></p>
 
 
 
