--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
         }
     </style>
     <center>
-        <iframe src="playerjs.html?file=https://skr.pp.ua/player/playerjs-24-ukraina.js" type="text/html" width=400 height=300 frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://mumedfordmemorialorg-my.sharepoint.com/personal/k7_mu_medfordmemorial_org/_layouts/15/embed.aspx?UniqueId=7120aede-0fef-47b2-b289-caf54a1933a7&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=OneUpFileViewer&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Форсаж 10 (2023).mkv"></iframe>
     </center>
 </body>
 </html>
