--- a/test.html
+++ b/test.html
@@ -12,7 +12,6 @@
         }
     </style>
     <center>
-    <iframe src="https://mumedfordmemorialorg-my.sharepoint.com/personal/k7_mu_medfordmemorial_org/_layouts/15/embed.aspx?UniqueId=7120aede-0fef-47b2-b289-caf54a1933a7&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=OneUpFileViewer&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="Форсаж 10 (2023).mkv"></iframe>
-    </center>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/agjiGIAzUSk" title="Форсаж 10 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    </center>
 </body>
 </html>
