--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <body>
 
 
-
-<p><a href="https://skr.pp.ua/Avatar2.htm">
-<img border="0" src="https://static.hdrezka.ac/i/2022/12/22/tc5e6b8212683gn66r84s.jpg" width="120" height="177"></a></p>
-
+<iframe src="https://v1686731330.bazon.site/kp/959062" frameborder="0" scrolling="no" allowfullscreen="" referrerpolicy="origin" width="800" height="452"></iframe>
 
 
 </body>
