--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
 
-<iframe src="https://v1686731330.bazon.site/kp/959062" frameborder="0" scrolling="no" allowfullscreen="" referrerpolicy="origin" width="800" height="452"></iframe>
+
+  <script src="https://v1686731533.bazon.site/js/bazon.js"></script>
+  <div id='bazon' data-width='800' data-height='452' data-kinopoisk='959062' data-replace='' data-calback='' data-calback_found=''></div>
 
 
 </body>
