--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-
+<iframe width="558" height="314" src="//video.platformcraft.ru/stream?src=http%3A%2F%2Flnltrvds.ottclub.xyz%2Fiptv%2F5A86MM7YFX44T9%2F904%2Findex.m3u" frameBorder="0" scrolling="no" allowFullScreen></iframe>
 
 
 
