--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-<iframe width="558" height="314" src="//video.platformcraft.ru/stream?src=http%3A%2F%2Flnltrvds.ottclub.xyz%2Fiptv%2F5A86MM7YFX44T9%2F904%2Findex.m3u" frameBorder="0" scrolling="no" allowFullScreen></iframe>
+
+  <iframe width="1280" height="545" src="https://www.youtube.com/embed/vi-ua_dEIBs" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 
