--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 
 <body>
 
-  <iframe width="1280" height="545" src="https://www.youtube.com/embed/vi-ua_dEIBs" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-
+<iframe src="https://v1619632064.bazon.site/kp/4510739" frameborder="0" allowfullscreen="" width="800" height="452"></iframe>
 
 
 </body>
