--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<iframe src="https://v1619632064.bazon.site/kp/4510739" frameborder="0" allowfullscreen="" width="800" height="452"></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/agjiGIAzUSk" title="Форсаж 10 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 </body>
