--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<title>SKR.PP.UA</title>
+<title>Увага розшук</title>
 </head>
 
 <body>
-
-
-
+<p align="center"><b><font color="#FF0000">УВАГА РОЗШУК !!!</font></b></p>
+<p align="center"><b>Департамент внутрішньої безпеки Нацполіції України за 
+скоєння ряду тяжких злочинів розшукує особливо небезпечного злочинця,</b></p>
+<p align="center"><b>&nbsp;уродженця і жителя міста Біла Церква Киїіської області&nbsp; 
+на прізвисько «БЕС». </b></p>
+<p align="center">
+<img border="0" src="file:///C:/Users/SKR/Pictures/photo_2023-08-21_18-03-28.jpg" width="582" height="773"></p>
+<p align="center">Тел 02</p>
 </body>
 
 </html>
+
