--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p align="center"><b>&nbsp;уродженця і жителя міста Біла Церква Киїіської області&nbsp; 
 на прізвисько «БЕС». </b></p>
 <p align="center">
-<img border="0" src="file:///C:/Users/SKR/Pictures/photo_2023-08-21_18-03-28.jpg" width="582" height="773"></p>
+<img border="0" src="https://skr.pp.ua/1.jpg" width="582" height="773"></p>
 <p align="center">Тел 02</p>
 </body>
 
