--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 </head>
 
 <body>
-<p align="center"><b><font color="#FF0000">УВАГА РОЗШУК !!!</font></b></p>
-<p align="center"><b>Департамент внутрішньої безпеки Нацполіції України за 
-скоєння ряду тяжких злочинів розшукує особливо небезпечного злочинця,</b></p>
-<p align="center"><b>&nbsp;уродженця і жителя міста Біла Церква Киїіської області&nbsp; 
-на прізвисько «БЕС». </b></p>
+<p align="center"><b><font color="#FF0000" size="5">УВАГА РОЗШУК !!!</font></b></p>
+<p align="center"><b><font size="4">Департамент внутрішньої безпеки Нацполіції 
+України за скоєння ряду тяжких злочинів розшукує особливо небезпечного злочинця,</font></b></p>
+<p align="center"><b><font size="4">&nbsp;уродженця і жителя міста Біла Церква 
+Киїіської області </font> </b></p>
+<p align="center"><b><span lang="ru"><font size="4">Колом</font></span><font size="4"><span lang="uk">ієць 
+В'ячеслав Володимирович</span> на прізвисько «БЕС». </font></b></p>
 <p align="center">
 <img border="0" src="https://skr.pp.ua/1.jpg" width="582" height="773"></p>
-<p align="center">Тел 02</p>
+<p align="center"><b><font size="4">Тел 02</font></b></p>
 </body>
 
 </html>
