--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>SKR</title>
+		<title>Ultimate Video Player</title>
 		
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1 user-scalable=no" />
@@ -262,7 +262,7 @@
 		
 		<!--  Playlists -->
 			<ul id="playlists" style="display:none;">
-				<li data-source="playlist1" data-playlist-name="ФИЛЬМЫ" data-thumbnail-path="content/thumbnails/p-html.jpg">
+				<li data-source="playlist1" data-playlist-name="MY HTML PLAYLIST 1" data-thumbnail-path="content/thumbnails/p-html.jpg">
 					<p class="fwduvp-categories-title"><span class="fwduvp-header">Title: </span><span class="fwduvp-title">My HTML playlist 1</span></p>
 					<p class="fwduvp-categories-type"><span class="fwduvp-header">Type: </span>HTML</p>
 					<p class="fwduvp-categories-description"><span class="fwduvp-header">Description: </span>Created using <strong>HTML markup</strong>, all format are supported and it can have mixed video formats.</p>
@@ -408,10 +408,10 @@
 					</ul>
 				</li>
 				
-				<li data-thumb-source="content/thumbnails/hls-small.jpg" data-video-source="http://195.64.244.26:8080/share.cgi?ssid=fe8c8b97a74f4484918084b0c8ab52ce&openfolder=forcedownload&ep=&_dc=1722666027482&fid=fe8c8b97a74f4484918084b0c8ab52ce" data-poster-source="content/posters/hls-poster.jpg" data-downloadable="yes">
+				<li data-thumb-source="content/thumbnails/hls-small.jpg" data-video-source="https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8" data-poster-source="content/posters/hls-poster.jpg" data-downloadable="yes">
 					<div data-video-short-description="">
 						<div>
-							<p class="fwduvp-thumbnail-title">Плохие парни навсегда (2024)</p>
+							<p class="fwduvp-thumbnail-title">HLS Live Streaming & m3u8</p>
 							<p class="fwduvp-thumbnail-description">HTTP Live Streaming</span> /<span class="myBold"> HLS</span> / <span class="myBold">m3u8</span> video support on all browsers mobile or desktop.</p>
 						</div>
 					</div>
@@ -612,8 +612,7 @@
 					</div>
 				</li>
 
-				<li data-thumb-source="content/thumbnails/hls-small.jpg" data-video-source="http://195.64.244.26:8080/share.cgi?ssid=fe8c8b97a74f4484918084b0c8ab52ce&openfolder=forcedownload&ep=&_dc=1722666027482&fid=fe8c8b97a74f4484918084b0c8ab52ce
-.m3u8" data-poster-source="content/posters/hls-poster.jpg" data-downloadable="yes">
+				<li data-thumb-source="content/thumbnails/hls-small.jpg" data-video-source="https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8" data-poster-source="content/posters/hls-poster.jpg" data-downloadable="yes">
 					<div data-video-short-description="">
 						<div>
 							<p class="fwduvp-thumbnail-title">HLS Live Streaming & m3u8</p>
@@ -840,8 +839,7 @@
 					</div>
 				</li>
 				
-				<li data-thumb-source="content/thumbnails/v11.jpg" data-video-source="http://195.64.244.26:8080/share.cgi?ssid=fe8c8b97a74f4484918084b0c8ab52ce&openfolder=forcedownload&ep=&_dc=1722666027482&fid=fe8c8b97a74f4484918084b0c8ab52ce
-" data-poster-source="content/posters/vimeo-poster.jpg">
+				<li data-thumb-source="content/thumbnails/v11.jpg" data-video-source="https://vimeo.com/channels/top/56298775" data-poster-source="content/posters/vimeo-poster.jpg">
 					<div data-video-short-description="">
 						<div>
 							<p class="fwduvp-thumbnail-title">Moonwalk</p>
